--- a/css/blog_layout.css
+++ b/css/blog_layout.css
@@ -25,6 +25,18 @@ header h1 {
   line-height:1.1;
 }
 
+header img {
+  margin:0px;
+  padding:0px;
+  padding-right:15px;
+  vertical-align:middle;
+}
+
+header a {
+  text-decoration:none;
+  color:inherit;
+}
+
 nav {
   background-color:#eeeeee;
   width:200px;
@@ -60,4 +72,10 @@ nav {
 
 #footer h2 {
   font-size:12px;
+}
+
+#footer h2 a {
+  text-decoration:none;
+  color:inherit;
+  font-family:inherit;
 }
