--- a/css/blog_entry.css
+++ b/css/blog_entry.css
@@ -45,8 +45,8 @@
   font-size:14px;
   line-height:22px;
   margin:0 0 0px 90px;
-  padding:0px 15px 45px 30px;
-  min-height:300px;
+  padding:0px 15px 15px 30px;
+  /*min-height:300px;*/
   position:relative;
   color:black;
   font-family:Verdana, Geneva, Tahoma, Arial, Helvetica, sans-serif;
@@ -61,7 +61,7 @@
   font-size:35px;
   line-height:72px;
   margin:0px;
-  padding:0px 15px 30px 0px;
+  padding:0px 15px 15px 0px;
   text-transform:uppercase;
   color:black;
 }
