--- a/css/blog_layout.css
+++ b/css/blog_layout.css
@@ -1,3 +1,7 @@
+strong {
+  font-weight:bold;
+}
+
 .page {
   width:100%;
   padding:15px;
@@ -53,6 +57,7 @@ nav {
   margin-left:230px;
   height:100%;
   overflow:hidden;
+  min-height:500px;
 }
 
 #footer {
