--- a/css/blog_layout.css
+++ b/css/blog_layout.css
@@ -2,6 +2,10 @@ strong {
   font-weight:bold;
 }
 
+p {
+  margin-bottom:8px;
+}
+
 .page {
   width:100%;
   padding:15px;
@@ -58,6 +62,7 @@ nav {
   height:100%;
   overflow:hidden;
   min-height:500px;
+  font-family:Verdana, Geneva, Tahoma, Arial, Helvetica, sans-serif;
 }
 
 #footer {
