--- a/css/nav.css
+++ b/css/nav.css
@@ -14,6 +14,10 @@ nav h1:not(:first-child) {
   padding-top:15px;
 }
 
+nav #tags h1 {
+  padding-top:15px;
+}
+
 nav h2 {
   font-size:18px;
   margin:0px;
@@ -25,6 +29,10 @@ nav h2 {
 nav h1 img {
   width:24px;
   height:24px;
+  margin:0px;
+  padding:0px;
+  padding-right:8px;
+  vertical-align:top;
 }
 
 nav #posts p {
@@ -35,13 +43,6 @@ nav #posts p {
 nav .break {
   border-bottom:1px solid black;
   margin-bottom:12px;
-}
-
-nav #posts h1 img {
-  margin:0px;
-  padding:0px;
-  padding-right:8px;
-  vertical-align:top;
 }
 
 nav #search input:first-child {
