--- a/css/blog_layout.css
+++ b/css/blog_layout.css
@@ -6,6 +6,15 @@ p {
   margin-bottom:8px;
 }
 
+a, a:visited {
+  color:Blue;
+  text-decoration:none;
+}
+
+a:hover {
+  text-decoration:underline;
+}
+
 .page {
   padding:0px;
   margin:0px;
@@ -30,6 +39,7 @@ header h1 {
   padding-top:20px;
   padding-bottom:10px;
   line-height:1.1;
+  color:white;
 }
 
 header img {
@@ -39,7 +49,7 @@ header img {
   vertical-align:middle;
 }
 
-header a {
+header a, header a:hover, footer a, footer a:hover {
   text-decoration:none;
   color:inherit;
 }
